...
        case .readItLater:
            return "Link"
        }
    }
    
    var textFieldPlaceholderText:  String {
        return "URL"
    }
    
    var addButtonTitle: String {
        switch self {
        case .feed:
            return "Add feed"
        case .readItLater:
            return "Add link"
        }
    }
}

...
